docs/errors/examples/process-exit-nonzero/process-exit-nonzero.grob
// E5602 — process.runOrFail observes a non-zero exit code from the subprocess
// Eventual path: docs/errors/examples/process-exit-nonzero/process-exit-nonzero.grob
result := process.runOrFail("git", ["push", "origin", "main"])
print(result.stdout)
